--- a/idpwSearch.html
+++ b/idpwSearch.html
@@ -86,8 +86,58 @@
                         <div class="w3-center w3-large w3-margin-top" id="mypagebox">
                             <h3>PW 찾기</h3>
                         </div>
-
                         
+                        <br>
+                        <div class="mypagebox">
+                                <label for="r_pn2" class="label_rd">본인 이메일로 인증</label>
+                            <div class="form-group">
+                                <label for="name">이름</label>
+                                <input type="text" class="form-control" id="name" placeholder="이름">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">이메일</label>
+                                <input type="text" class="form-control" id="email" placeholder="등록된 이메일주소">
+                                <br>
+                                <div class="input-group-addon">
+                                    <button class="idpw-btn">인증번호 전송</button>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="Number">인증번호</label>
+                                <input type="text" class="form-control" id="Number" placeholder="인증번호">
+                            </div>
+
+                            <div class="input-group-addon">
+                                <button class="idpw-btn">인증하기</button>
+                            </div>
+                            <br>
+                        </div>
+                        <br>
+                        <div class="mypagebox">
+                            <label for="r_pn2" class="label_rd">본인 휴대전화로 인증</label>
+                        <div class="form-group">
+                            <label for="name">이름</label>
+                            <input type="text" class="form-control" id="name" placeholder="이름">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">휴대전화</label>
+                            <input type="text" class="form-control" id="email" placeholder="등록된 휴대전화번호">
+                            <br>
+                            <div class="input-group-addon">
+                                <button class="idpw-btn">인증번호 전송</button>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="Number">인증번호</label>
+                            <input type="text" class="form-control" id="Number" placeholder="인증번호">
+                        </div>
+
+                        <div class="input-group-addon">
+                            <button class="idpw-btn">인증하기</button>
+                        </div>
+                        <br>
                     </form>
 
                 </div>
