--- a/idpwSearch.html
+++ b/idpwSearch.html
@@ -86,13 +86,13 @@
                         <div class="w3-center w3-large w3-margin-top" id="mypagebox">
                             <h3>PW 찾기</h3>
                         </div>
-                        
+
                         <br>
                         <div class="mypagebox">
                                 <label for="r_pn2" class="label_rd">본인 이메일로 인증</label>
                             <div class="form-group">
-                                <label for="name">이름</label>
-                                <input type="text" class="form-control" id="name" placeholder="이름">
+                                <label for="name">아이디</label>
+                                <input type="text" class="form-control" id="name" placeholder="아이디">
                             </div>
                             <div class="form-group">
                                 <label for="email">이메일</label>
@@ -115,11 +115,22 @@
                         </div>
                         <br>
                         <div class="mypagebox">
-                            <label for="r_pn2" class="label_rd">본인 휴대전화로 인증</label>
-                        <div class="form-group">
-                            <label for="name">이름</label>
-                            <input type="text" class="form-control" id="name" placeholder="이름">
-                        </div>
+                            <label for="r_pn2" class="label_rd">등록된 비밀번호 찾기 키워드로 인증</label>
+                            <div class="form-group">
+                                <label for="password-confirm">비밀번호 찾기 키워드</label>
+                                <select name='pwhint' size='1' class='select'>
+                                    <option value=''>선택하세요 </option>
+                                    <option value='30'>졸업한 초등학교 이름은?</option>
+                                    <option value='31'>제일 친한 친구의 핸드폰 번호는? </option>
+                                    <option value='32'>아버지 성함은?</option>
+                                    <option value='33'>어머니 성함은?</option>
+                                    <option value='34'>어릴 적 내 별명은?</option>
+                                    <option value='35'>가장 아끼는 물건은?</option>
+                                    <option value='36'>좋아하는 동물은?</option>
+                                    <option value='37'>좋아하는 색깔은?</option>
+                                    <option value='38'>좋아하는 음식은?</option>
+                                </select>
+                            </div>
                         <div class="form-group">
                             <label for="email">휴대전화</label>
                             <input type="text" class="form-control" id="email" placeholder="등록된 휴대전화번호">
